projetos/local/debezium-platform/auth-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-proxy
  namespace: debezium-platform
spec:
  selector:
    app: auth-proxy
  ports:
    - name: stage
      port: 80
      targetPort: 80
    - name: conductor
      port: 8081
      targetPort: 8081
