projetos/local/debezium-platform/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: debezium-platform
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
