projetos/local/debezium-platform/httproute-conductor.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: debezium-conductor-route
  namespace: debezium-platform
spec:
  parentRefs:
    - name: nexus-gateway
      namespace: nginx-gateway
      sectionName: tech-https
  hostnames:
    - "debezium-platform-api.tech.nexusplatform.com.br"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Access-Control-Allow-Origin
                value: "https://debezium-platform.tech.nexusplatform.com.br"
              - name: Access-Control-Allow-Methods
                value: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
              - name: Access-Control-Allow-Headers
                value: "Content-Type, Authorization, Accept"
              - name: Access-Control-Allow-Credentials
                value: "true"
      timeouts:
        request: 60s
        backendRequest: 60s
      backendRefs:
        - name: auth-proxy
          port: 8081
